several adjustements to layout

--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -7,6 +7,8 @@
 
 // Colors
 // -------------------------
+
+// color used on charts and balance panels
 @positive:                  #049cdb;
 @negative:                  #9d261d;
 @income:                    #46a546;
