--- a/templates/webapp/settings/category-list.html
+++ b/templates/webapp/settings/category-list.html
@@ -10,7 +10,7 @@
         <i class="icon-plus icon-large"></i>
     </button>
 
-    <input type="search" class="pull-right" ng-model="search.name" placeholder="{% trans "Search categories"%}">
+    <input type="search" role="search" class="pull-right" ng-model="search.name" placeholder="{% trans "Search categories"%}">
 
     <table class="table table-striped category-table">
         <thead>
