--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 
         {% block extrahead %}{% endblock extrahead %}
     </head>
-    <body>
+    <body ng-app="webapp" id="ng-app">
 
     <div class="navbar navbar-default" role="navigation">
         <div class="container">
@@ -34,12 +34,13 @@
                 <a class="navbar-brand" href="{% url "index" %}">{{ SITE_NAME }}</a>
             </div>
 
+            {% block webapp-menu %}
+            {% endblock webapp-menu %}
+
             <div class="collapse navbar-collapse">
                 <div class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
-                    <p class="navbar-text">
-                            Olá, {{ user.name|capfirst }} (<a href="{% url "change_password" %}" class="navbar-link">Change password</a>) (<a href="{% url "logout" %}" class="navbar-link">Logout</a>)
-                    </p>
+                        {% include "user-menu.html" %}
                     {% else %}
                         {% include "access/forms/login_inline.html" %}
                     {% endif %}
@@ -47,15 +48,6 @@
             </div>
         </div>
     </div>
-
-{% comment %}
-    <form class="navbar-form navbar-left" role="search">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-{% endcomment %}
 
         {% block body %}{% endblock body %}
 
