--- a/static/less/forms.less
+++ b/static/less/forms.less
@@ -17,7 +17,7 @@ form {
 
         i.input-icon-prepend, i.input-icon-append {
             position: absolute;
-            top: @padding-base-vertical;
+            top: (@padding-base-vertical + 1); //padding + border
         }
 
         i.input-icon-prepend {
