fixing month navigator

--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -191,15 +191,15 @@ span.category-label {
 
 .month-selector {
     margin-bottom: 20px;
-    width: 100%;
     text-align: center;
 
-    i {
-        font-size: 20px;
+    .previous-month {
+    }
+
+    .next-month {
     }
 
     .actual-month {
-        width: 25%
     }
 }
 
