--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -15,64 +15,66 @@
     <div class="panel panel-default" ng-controller="TransactionListCtrl">
          
         <div class="panel-heading">{% trans "Transactions" %}</div>
+
         <div class="panel-body">
+            <div class="month-selector">
+                <div class="btn-group">
+                <button class="btn btn-link previous-month" ng-class="{disabled: loading}"><i class="icon-chevron-left icon-" ng-click="moveMonth('subtract')"></i></button>
+                <button class="btn btn-link actual-month" ng-class="{disabled: loading}" ex-month-selector="filterDate"></button>
+                <button class="btn btn-link next-month" ng-class="{disabled: loading}"><i class="icon-chevron-right icon-" ng-click="moveMonth('add')"></i></button>
+                </div>
+            </div>
 
-        <div class="month-selector btn-group">
-            <button class="btn btn-link previous-month" ng-class="{disabled: loading}"><i class="icon-chevron-left" ng-click="moveMonth('subtract')"></i></button>
-            <button class="btn btn-link actual-month" ng-class="{disabled: loading}" ex-month-selector="filterDate"></button>
-            <button class="btn btn-link next-month" ng-class="{disabled: loading}"><i class="icon-chevron-right" ng-click="moveMonth('add')"></i></button>
-        </div>
+            <div ng-repeat="day in days | orderBy: 'day':true">
+                <table class="transaction-table">
+                    <thead class="header">
+                        <tr class="transaction-list-day">
+                            <th colspan="4" ng-bind="day.day | date:'fullDate'"></th>
+                        </tr>
+                        <tr class="transaction-list-columns">
+                            <th>{% trans "Category" %}</th>
+                            <th class="description-column-header">{% trans "Description" %}</th>
+                            <th class="value-column-header">{% trans "Value" %}</th>
+                            <th>{% trans "Actions" %}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr
+                            class="transaction-row"
+                            ng-repeat="transaction in day.transactions"
+                            >
 
-        <div ng-repeat="day in days | orderBy: 'day':true">
-            <table class="transaction-table">
-                <thead class="header">
-                    <tr class="transaction-list-day">
-                        <th colspan="4" ng-bind="day.day | date:'fullDate'"></th>
-                    </tr>
-                    <tr class="transaction-list-columns">
-                        <th>{% trans "Category" %}</th>
-                        <th class="description-column-header">{% trans "Description" %}</th>
-                        <th class="value-column-header">{% trans "Value" %}</th>
-                        <th>{% trans "Actions" %}</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr
-                        class="transaction-row"
-                        ng-repeat="transaction in day.transactions"
-                        >
+                            <td class="category-column">
+                                <span ex-category="transaction.category"></span>
+                            </td>
 
-                        <td class="category-column">
-                            <span ex-category="transaction.category"></span>
-                        </td>
+                            <td class="description-column" ng-bind="transaction.description"></td>
 
-                        <td class="description-column" ng-bind="transaction.description"></td>
+                            <td class="value-column">
+                                <span ex-currency ex-currency-value="transaction.value"></span>
+                            </td>
 
-                        <td class="value-column">
-                            <span ex-currency ex-currency-value="transaction.value"></span>
-                        </td>
+                            <td class="action-bar" ex-actionbar ng-controller="TransactionActionBarCtrl">
+                                <i
+                                    class="icon-trash delete-entry"
+                                    ng-click="removeTransaction()"
+                                ></i>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div> <!-- repeat -->
 
-                        <td class="action-bar" ex-actionbar ng-controller="TransactionActionBarCtrl">
-                            <i
-                                class="icon-trash delete-entry"
-                                ng-click="removeTransaction()"
-                            ></i>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div> <!-- repeat -->
+            <div id="empty-msg" ng-show="isEmpty()">
+                {% trans "No transacions for the period." %}
+            </div>
 
-        <div id="empty-msg" ng-show="isEmpty()">
-            {% trans "No transacions for the period." %}
-        </div>
+            <div class="loading-spinner" ng-show="loading">
+                <i class="icon-spinner icon-spin icon-3x"></i>
+            </div>
 
-        <div class="loading-spinner" ng-show="loading">
-            <i class="icon-spinner icon-spin icon-3x"></i>
-        </div>
-
-    </div>
-    </div> <!-- well -->
+        </div> <!-- panel body -->
+    </div> <!-- panel -->
 
 </div>
 
