--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -25,45 +25,43 @@
                 </div>
             </div>
 
-            <div ng-repeat="day in days | orderBy: 'day':true">
-                <table class="transaction-table">
-                    <thead class="header">
-                        <tr class="transaction-list-day">
-                            <th colspan="4" ng-bind="day.day | date:'fullDate'"></th>
-                        </tr>
-                        <tr class="transaction-list-columns">
-                            <th>{% trans "Category" %}</th>
-                            <th class="description-column-header">{% trans "Description" %}</th>
-                            <th class="value-column-header">{% trans "Value" %}</th>
-                            <th>{% trans "Actions" %}</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr
-                            class="transaction-row"
-                            ng-repeat="transaction in day.transactions"
-                            >
+            <table class="transaction-table">
+                <thead class="">
+                    <tr class="transaction-list-columns">
+                        <th>{% trans "Category" %}</th>
+                        <th class="description-column-header">{% trans "Description" %}</th>
+                        <th class="value-column-header">{% trans "Value" %}</th>
+                        <th>{% trans "Actions" %}</th>
+                    </tr>
+                </thead>
+                <tbody ng-repeat="day in days | orderBy: 'day':true">
+                    <tr class="transaction-list-day">
+                        <td colspan="4" ng-bind="day.day | date:'fullDate'"></td>
+                    </tr>
+                    <tr
+                        class="transaction-row"
+                        ng-repeat="transaction in day.transactions"
+                        >
 
-                            <td class="category-column">
-                                <span ex-category="transaction.category"></span>
-                            </td>
+                        <td class="category-column">
+                            <span ex-category="transaction.category"></span>
+                        </td>
 
-                            <td class="description-column" ng-bind="transaction.description"></td>
+                        <td class="description-column" ng-bind="transaction.description"></td>
 
-                            <td class="value-column">
-                                <span ex-currency ex-currency-value="transaction.value"></span>
-                            </td>
+                        <td class="value-column">
+                            <span ex-currency ex-currency-value="transaction.value"></span>
+                        </td>
 
-                            <td class="action-bar" ex-actionbar ng-controller="TransactionActionBarCtrl">
-                                <i
-                                    class="icon-trash delete-entry"
-                                    ng-click="removeTransaction()"
-                                ></i>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div> <!-- repeat -->
+                        <td class="action-bar" ex-actionbar ng-controller="TransactionActionBarCtrl">
+                            <i
+                                class="icon-trash delete-entry"
+                                ng-click="removeTransaction()"
+                            ></i>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
             <div id="empty-msg" ng-show="isEmpty()">
                 {% trans "No transacions for the period." %}
