--- a/templates/webapp/month_balance_panel.html
+++ b/templates/webapp/month_balance_panel.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <h4 class="panel-title">{% trans "Average" %}</h4>
+    <h4 class="chart-title">{% trans "Average" %}</h4>
 
     <div value='chartData' type="area" height="300" chart></div>
 </div>
