--- a/static/less/balance.less
+++ b/static/less/balance.less
@@ -1,3 +1,9 @@
+.chart-title {
+    text-align: center;
+    margin-bottom: 15px;
+    margin-top: 30px;
+}
+
 div.balance-info {
     padding-right: 15px;
 
@@ -35,10 +41,9 @@ div.balance-info {
         }
 
         .description {
-            line-height: none;
             position: absolute;
             font-size: 11px;
-            bottom: 0px;
+            bottom: 3px;
             left: 0px;
         }
 
