--- a/static/less/category-list.less
+++ b/static/less/category-list.less
@@ -1,8 +1,8 @@
 .category-table {
-    .category-row {
+    tbody tr {
         cursor: pointer;
 
-        &:hover {
+        td.category-name:hover {
             text-decoration: underline;
         }
     }
