--- a/templates/webapp/transaction-form.html
+++ b/templates/webapp/transaction-form.html
@@ -3,13 +3,12 @@
 <div class="panel-heading">{% trans "New transaction" %}</div>
 <div ng-controller="TransactionFormCtrl" class="panel-body">
 <form
-    class="form transaction-form"
+    class="transaction-form"
     name="transactionForm"
     method="post"
 
     novalidate
     >
-
 
     <div class="form-group input-icon">
         <i class="icon-tag input-icon-prepend"></i>
