--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
 
-            <table class="transaction-table">
+            <table class="table table-striped transaction-table">
                 <thead class="">
                     <tr class="transaction-list-columns">
                         <th>{% trans "Category" %}</th>
