--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -59,6 +59,7 @@
         <script src="{{lib}}jquery.maskMoney.js"></script>
         <script src="{{lib}}spectrum.js"></script>
         <script src="{{lib}}toastr.js"></script>
+        <script src="{{lib}}bootstrap-typeahead.js"></script>
         <script src="{{lib}}min/moment.min.js"></script>
 
         <script src="{{locales}}angular-locale_pt-br.js"></script>
