--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6686,6 +6686,11 @@ td.visible-print {
     display: none !important;
   }
 }
+.typeahead {
+  z-index: 1051;
+  margin-top: 2px;
+  border-radius: 0px;
+}
 /*
  * OVERRIDES
  */
