--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -1,4 +1,5 @@
 @import "lib/bootstrap/bootstrap.less";
+@import "lib/typeahead.less";
 //@import "lib/datepicker.less";
 @import "variables.less";
 
