tweaking typeahead css

--- a/static/less/lib/typeahead.less
+++ b/static/less/lib/typeahead.less
@@ -4,4 +4,5 @@
     z-index: 1051;
     margin-top: 2px; // give it some space to breathe
     border-radius: @border-radius-base;
+    width: 100%;
 }
