--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 {% smart_spaceless %}
 
 {% load staticfiles %}
+{% load i18n %}
 {% load expenses_tags %}
 
 <!DOCTYPE html>
@@ -38,13 +39,27 @@
             {% endblock webapp-menu %}
 
             <div class="collapse navbar-collapse">
-                <div class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Contact us" %} <i class="icon-comments-alt icon-large"></i></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="https://www.facebook.com/niqels" class="navbar-link" target="_blank"><i class="icon-facebook-sign icon-large"></i> {% trans "Like us on Facebook" %}</a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/niqelsapp" class="navbar-link" target="_blank"><i class="icon-twitter-sign icon-large"></i> {% trans "Follow us on Twitter" %}</a>
+                                </li>
+                                <li>
+                                    <a href="mailto:contato@niqels.com.br" class="navbar-link" target="_blank"><i class="icon-envelope-alt icon-large"></i> {% trans "Email us" %}</a>
+                                </li>
+                            </ul>
+                        </li>
                         {% include "user-menu.html" %}
                     {% else %}
                         {% include "access/forms/login_inline.html" %}
                     {% endif %}
-                </div>
+                </ul>
             </div>
         </div>
     </div>
