--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -5,11 +5,64 @@
 @border-radius-small:            0px;
 
 
+
+// Scaffolding
+// -------------------------
+
+@body-bg:               @white;
+@text-color:            @blue-typo;
+
+
+
 // Colors
 // -------------------------
 
-// color used on charts and balance panels
+// Charts colors
 @positive:                  #049cdb;
 @negative:                  #9d261d;
 @income:                    #46a546;
 @outgo:                     @negative;
+
+// Theme colors, brighter to darker
+@white:                         #fdfdfd;
+@blue-component-heading:        #f5f5f5;
+@blue-background:               #eee;
+@blue-component-background:     #e7e6e6;
+@blue-almost:                   #707383;
+@blue-super:                    #595d92;
+@blue-typo:                     #585b6c;
+
+
+// Navbars
+// -------------------------
+@navbar-default-bg:                @blue-component-background;
+@navbar-default-color:             @blue-typo;
+
+// Navbar links
+@navbar-default-link-color:                @blue-typo;
+@navbar-default-link-hover-color:          @blue-super;
+@navbar-default-link-hover-bg:             darken(@navbar-default-bg, 10%);
+@navbar-default-link-active-color:         @white;
+@navbar-default-link-active-bg:            @blue-super;
+@navbar-default-link-disabled-color:       #ccc;
+@navbar-default-link-disabled-bg:          transparent;
+
+
+// Brand colors
+// -------------------------
+
+@brand-primary:                 @blue-super;
+
+
+// Panels
+// -------------------------
+@panel-bg:                      @blue-component-background;
+
+@panel-default-text:            @blue-typo;
+@panel-default-heading-bg:      @blue-background;
+
+
+// Forms
+// -------------------------
+
+@input-bg:                       @body-bg;
