--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -1,9 +1,7 @@
 {% load i18n %}
 
 <div class="col-md-3">
-<div class="panel panel-default">
     {% include "webapp/transaction-form.html" %}
-</div>
 </div>
 
 <div class="col-md-6">
@@ -12,72 +10,68 @@
     {% include "webapp/reminder-list.html" %}
     {% endcomment %}
 
-    <div class="panel panel-default" ng-controller="TransactionListCtrl">
+    <div id="transaction-list-panel" ng-controller="TransactionListCtrl">
          
-        <div class="panel-heading">{% trans "Transactions" %}</div>
+        <h4 class="area-header">{% trans "Transactions" %}</h4>
 
-        <div class="panel-body">
-            <div class="month-selector">
-                <div class="btn-group">
-                <button class="btn btn-link previous-month" ng-class="{disabled: loading}"><i class="icon-chevron-left icon-" ng-click="moveMonth('subtract')"></i></button>
-                <button class="btn btn-link actual-month" ng-class="{disabled: loading}" ex-month-selector="filterDate"></button>
-                <button class="btn btn-link next-month" ng-class="{disabled: loading}"><i class="icon-chevron-right icon-" ng-click="moveMonth('add')"></i></button>
-                </div>
+        <div class="month-selector">
+            <div class="btn-group">
+            <button class="btn btn-link previous-month" ng-class="{disabled: loading}"><i class="icon-chevron-left icon-" ng-click="moveMonth('subtract')"></i></button>
+            <button class="btn btn-link actual-month" ng-class="{disabled: loading}" ex-month-selector="filterDate"></button>
+            <button class="btn btn-link next-month" ng-class="{disabled: loading}"><i class="icon-chevron-right icon-" ng-click="moveMonth('add')"></i></button>
             </div>
+        </div>
 
-            <table class="table table-striped transaction-table">
-                <thead class="">
-                    <tr class="transaction-list-columns">
-                        <th>{% trans "Category" %}</th>
-                        <th class="description-column-header">{% trans "Description" %}</th>
-                        <th class="value-column-header">{% trans "Value" %}</th>
-                        <th>{% trans "Actions" %}</th>
-                    </tr>
-                </thead>
-                <tbody ng-repeat="day in days | orderBy: 'day':true">
-                    <tr class="transaction-list-day">
-                        <td colspan="4" ng-bind="day.day | date:'fullDate'"></td>
-                    </tr>
-                    <tr
-                        class="transaction-row"
-                        ng-repeat="transaction in day.transactions"
-                        >
+        <table class="table transaction-table">
+            <thead class="">
+                <tr class="transaction-list-columns">
+                    <th>{% trans "Category" %}</th>
+                    <th class="description-column-header">{% trans "Description" %}</th>
+                    <th class="value-column-header">{% trans "Value" %}</th>
+                    <th>{% trans "Actions" %}</th>
+                </tr>
+            </thead>
+            <tbody ng-repeat="day in days | orderBy: 'day':true">
+                <tr class="transaction-list-day">
+                    <td colspan="4" ng-bind="day.day | date:'fullDate'"></td>
+                </tr>
+                <tr
+                    class="transaction-row"
+                    ng-repeat="transaction in day.transactions"
+                    >
 
-                        <td class="category-column">
-                            <span ex-category="transaction.category"></span>
-                        </td>
+                    <td class="category-column">
+                        <span ex-category="transaction.category"></span>
+                    </td>
 
-                        <td class="description-column" ng-bind="transaction.description"></td>
+                    <td class="description-column" ng-bind="transaction.description"></td>
 
-                        <td class="value-column">
-                            <span ex-currency ex-currency-value="transaction.value"></span>
-                        </td>
+                    <td class="value-column">
+                        <span ex-currency ex-currency-value="transaction.value"></span>
+                    </td>
 
-                        <td class="action-bar" ex-actionbar ng-controller="TransactionActionBarCtrl">
-                            <i
-                                class="icon-trash delete-entry"
-                                ng-click="removeTransaction()"
-                            ></i>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                    <td class="action-bar" ex-actionbar ng-controller="TransactionActionBarCtrl">
+                        <i
+                            class="icon-trash delete-entry"
+                            ng-click="removeTransaction()"
+                        ></i>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
-            <div id="empty-msg" ng-show="isEmpty()">
-                {% trans "No transacions for the period." %}
-            </div>
+        <div id="empty-msg" ng-show="isEmpty()">
+            {% trans "No transacions for the period." %}
+        </div>
 
-            <div class="loading-spinner" ng-show="loading">
-                <i class="icon-spinner icon-spin icon-3x"></i>
-            </div>
+        <div class="loading-spinner" ng-show="loading">
+            <i class="icon-spinner icon-spin icon-3x"></i>
+        </div>
 
-        </div> <!-- panel body -->
     </div> <!-- panel -->
 
 </div>
 
 <div class="col-md-3">
-<div class="panel panel-default">
     {% include "webapp/month_balance_panel.html" %}
-</div>
 </div>
