--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,10 @@
         <title>{{ SITE_NAME }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Roboto:900' rel='stylesheet' type='text/css'>
+
         <link rel="stylesheet" type="text/css" href="{% static "css/styles.css" %}" />
 
         <script type="text/javascript">
