--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -258,7 +258,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Oxygen", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
   color: #585b6c;
@@ -393,7 +393,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   line-height: 1.1;
 }
@@ -6746,6 +6746,9 @@ td.visible-print {
 .btn i {
   margin-left: 5px;
 }
+a > i[class^="icon"] {
+  margin-left: 5px;
+}
 /*
  * /OVERRIDES
  */
@@ -6790,6 +6793,7 @@ form[id="signin-form"] input[type="submit"] {
   -o-user-select: none;
   user-select: none;
   text-transform: uppercase;
+  font-family: "Roboto", sans-serif;
   display: block;
   width: 100%;
   padding-left: 0;
@@ -6890,6 +6894,7 @@ form[id="login-inline"] input[type="submit"] {
   -o-user-select: none;
   user-select: none;
   text-transform: uppercase;
+  font-family: "Roboto", sans-serif;
 }
 form[id="login-inline"] input[type="submit"]:focus {
   outline: thin dotted #333;
@@ -7187,6 +7192,9 @@ h4.area-header {
 }
 .navbar-nav li.dropdown > ul.dropdown-menu > li > a:hover {
   color: #fdfdfd;
+}
+.btn {
+  font-family: "Roboto", sans-serif;
 }
 .datepicker:before {
   visibility: hidden;
