--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -8,9 +8,7 @@
 /*
  * OVERRIDES
  */
-body {
-//    background-image: url(../img/ricepaper2.png);
-}
+
 
 .datepicker {
     border: 1px solid @input-border;
@@ -27,6 +25,10 @@ body {
     i {
         margin-left: 5px;
     }
+}
+
+a > i[class^="icon"] {
+    margin-left: 5px;
 }
 
 /*
@@ -225,6 +227,10 @@ h4.area-header {
 // fixing color on navbar dropdown item hover 
 .navbar-nav li.dropdown > ul.dropdown-menu > li > a:hover {
     color: @white;
+}
+
+.btn {
+    font-family: @font-family-custom-panel;
 }
 
 .datepicker:before {
