--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,10 @@
     <div class="navbar navbar-default" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="{% url "index" %}">{{ SITE_NAME }}</a>
+                <a class="navbar-brand" href="{% url "index" %}">
+                    <img src="{% static "img/logo-squared.png" %}" alt="" class="img-squared brand-logo">
+                    {{ SITE_NAME }}
+                </a>
             </div>
 
             {% block webapp-menu %}
