--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -9,6 +9,20 @@
  * OVERRIDES
  */
 
+.left-column {
+    .make-sm-column(5);
+    .make-lg-column(3);
+}
+
+.content-column {
+    .make-sm-column(7);
+    .make-lg-column(6);
+}
+
+.right-column {
+    .make-sm-column(12);
+    .make-lg-column(3);
+}
 
 .datepicker {
     border: 1px solid @input-border;
@@ -134,6 +148,7 @@ thead tr th {
 
         th.description-column-header {
             text-align: center;
+
         }
     }
 
@@ -218,8 +233,14 @@ h4.area-header {
 }
 
 // fixing color on navbar dropdown item hover 
-.navbar-nav li.dropdown > ul.dropdown-menu > li > a:hover {
-    color: @white;
+.navbar-nav li.dropdown {
+    > ul.dropdown-menu > li > a:hover {
+        color: @white;
+    }
+
+    a.dropdown-toggle {
+        cursor: pointer;
+    }
 }
 
 .navbar-brand {
