--- a/templates/base.html
+++ b/templates/base.html
@@ -36,20 +36,24 @@
     <div class="navbar navbar-default" role="navigation">
         <div class="container">
             <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 <a class="navbar-brand" href="{% url "index" %}">
-                    <img src="{% static "img/logo-squared.png" %}" alt="" class="img-squared brand-logo">
+                    <img src="{% static "img/logo-squared.png" %}" class="img-squared brand-logo">
                     {{ SITE_NAME }}
                 </a>
             </div>
 
-            {% block webapp-menu %}
-            {% endblock webapp-menu %}
-
-            <div class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                {% block webapp-menu %}
+                {% endblock webapp-menu %}
                 <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Contact us" %} <i class="icon-comments-alt icon-large"></i></a>
+                            <a class="dropdown-toggle" data-toggle="dropdown">{% trans "Contact us" %} <i class="icon-comments-alt icon-large"></i></a>
                             <ul class="dropdown-menu">
                                 <li>
                                     <a href="https://www.facebook.com/niqels" class="navbar-link" target="_blank"><i class="icon-facebook-sign icon-large"></i> {% trans "Like us on Facebook" %}</a>
