--- a/templates/user-menu.html
+++ b/templates/user-menu.html
@@ -1,12 +1,12 @@
 {% load i18n %}
-    <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.name|capfirst }} <i class="icon-gears icon-large"></i></a>
-        <ul class="dropdown-menu">
-            <li>
-                <a href="{% url "change_password" %}" class="navbar-link">{% trans "Change password" %}</a>
-            </li>
-            <li>
-                <a href="{% url "logout" %}" class="navbar-link">{% trans "Logout" %}</a>
-            </li>
-        </ul>
-    </li>
+<li class="dropdown">
+    <a class="dropdown-toggle" data-toggle="dropdown">{{ user.name|capfirst }} <i class="icon-gears icon-large"></i></a>
+    <ul class="dropdown-menu">
+        <li>
+            <a href="{% url "change_password" %}" class="navbar-link">{% trans "Change password" %}</a>
+        </li>
+        <li>
+            <a href="{% url "logout" %}" class="navbar-link">{% trans "Logout" %}</a>
+        </li>
+    </ul>
+</li>
