--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -1,10 +1,10 @@
 {% load i18n %}
 
-<div class="col-md-3">
+<div class="left-column">
     {% include "webapp/transaction-form.html" %}
 </div>
 
-<div class="col-md-6">
+<div class="content-column">
 
     {% comment %}
     {% include "webapp/reminder-list.html" %}
@@ -72,6 +72,6 @@
 
 </div>
 
-<div class="col-md-3">
+<div class="right-column">
     {% include "webapp/month_balance_panel.html" %}
 </div>
