new input types

--- a/templates/access/forms/login.html
+++ b/templates/access/forms/login.html
@@ -24,7 +24,7 @@
         <div class="controls input-icon">
             <i class="icon-envelope input-icon-prepend"></i>
             <input
-                type="text"
+                type="email"
                 name="username"
                 id="username"
                 class="input-block-level"
