--- a/templates/access/forms/login_inline.html
+++ b/templates/access/forms/login_inline.html
@@ -4,7 +4,7 @@
 
         <span class="input-icon">
             <i class="icon-envelope input-icon-prepend"></i>
-            <input type="text" class="input-medium" name="username" placeholder="{% trans "Email" %}">
+            <input type="email" class="input-medium" name="username" placeholder="{% trans "Email" %}">
         </span>
 
         <span class="input-icon">
