--- a/templates/webapp/transaction-form.html
+++ b/templates/webapp/transaction-form.html
@@ -47,7 +47,7 @@
         <input
             id="id_value"
             name="value"
-            type="text"
+            type="tel"
             class="form-control"
 
             ng-model="formData.value"
