--- a/templates/access/forms/register.html
+++ b/templates/access/forms/register.html
@@ -24,7 +24,7 @@
         <div class="controls input-icon">
             <i class="icon-envelope input-icon-prepend"></i>
             <input
-                type="text"
+                type="email"
                 name="email"
                 class="input-block-level"
                 placeholder="{% trans "Email" %}"
