--- a/templates/webapp/settings/settings.html
+++ b/templates/webapp/settings/settings.html
@@ -1,10 +1,9 @@
 {% load i18n %}
 
-<div class="col-md-3">
+<div class="left-column">
+    <h4 class="area-header">{% trans "Menu" %}</h4>
+
     <div class="panel panel-default">
-        <div class="panel-heading">
-            {% trans "Menu" %}
-        </div>
         <div class="panel-body">
             <ul class="nav nav-list" id="settings-menu">
                 <li ng-class="{active: $state.includes('settings.categories')}"><a href="#/settings/categories">{% trans "Categories" %}</a></li>
@@ -16,6 +15,5 @@
     </div>
 </div>
 
-<div class="col-md-9">
-    <div id="settings-pane" class="panel panel-default" ui-view></div>
+<div class="col-md-9" ui-view>
 </div>
